src/test/ui/nll/closure-requirements/escape-argument.stderr
note: no external requirements
  --> $DIR/escape-argument.rs:26:38
   |
LL |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^
   |
   = note: defining type: test::{closure#0} with closure substs [
               i16,
               for<'a^0, 'b^1> extern "rust-call" fn((&'a^0 mut &'b^1 i32, &'b^1 i32)),
               (),
           ]

note: no external requirements
  --> $DIR/escape-argument.rs:20:1
   |
LL | fn test() {
   | ^^^^^^^^^
   |
   = note: defining type: test

error[E0597]: `y` does not live long enough
  --> $DIR/escape-argument.rs:27:25
   |
LL |         closure(&mut p, &y);
   |                         ^^ borrowed value does not live long enough
LL |
LL |     }
   |     - `y` dropped here while still borrowed
LL |
LL |     deref(p);
   |           - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
